# Ajax

./: Cargo.toml  README.md
ExperimentResult/: ExperimentResult.7z
algebra/: Cargo.toml
algebra/src/polynomial/field/ntt/: mod.rs
algebra/src/polynomial/numeric/coeff/: mod.rs
algebra/src/random/discrete_gaussian/: cdt.rs  mod.rs  unix_cdt.rs  ziggurat.rs
algebra/src/utils/: size.rs
fhe_core/: Cargo.toml
fhe_core/benches/: rlwe_mul_rgsw.rs  trace.rs
fhe_core/src/: modulus_switch.rs  public_key.rs
fhe_core/src/blind_rotation/: binary.rs  ternary.rs
fhe_core/src/key_switch/: lwe.rs  rlwe.rs
lattice/src/lwe/: normal.rs
lattice/src/rlwe/: normal.rs
mpc/: Cargo.toml
mpc/src/dn/: matrix.rs
network/src/: lib.rs
thfhe/: Cargo.toml
thfhe/batch/: run_test_triples.py  run_thfhe.py  tc_auto_control.sh
thfhe/examples/: thfhe.rs
thfhe/predata/10/: triples_P_0.txt  triples_P_1.txt  triples_P_2.txt  triples_P_3.txt  triples_P_4.txt  triples_P_5.txt  triples_P_6.txt  triples_P_7.txt  triples_P_8.txt  triples_P_9.txt
thfhe/src/: encrypt.rs  evaluate.rs  key_gen.rs  lwe.rs  secret_key.rs
thfhe/src/parameter/: constants.rs  mod.rs
