[workspace]

members = ["algebra", "fhe_core", "lattice","mpc", "network", "thfhe"]

resolver = "2"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"
rand_core = "0.6"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.14"
bytemuck = "1.23.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
criterion = "0.7.0"
bigdecimal = "0.4.8"

[profile.bench]
lto = true
codegen-units = 1
